# SFUSE

./: .gitignore  CMakeLists.txt  Doxyfile  HISTORY.md  README.md  generate_compile_commands.sh  mount_sfuse.sh  run.sh  sfuse.c  sfuse_sorted_report.txt  sfuse_trace.txt
benchmark/: README.md  result.md  result.xlsx  workflow.md  workflow_200mb_block.md  workflow_200mb_img.md
docs/: annotated.html  annotated_dup.js  classes.html  dir_000002_000001.html  dir_44cec6e3ea30e076b9313c4641539d9f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
docs/latex/: annotated.tex  dir_44cec6e3ea30e076b9313c4641539d9f.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  refman.aux  (+7 more)
include/: bitmap.h  block.h  dir.h  disk.h  fs.h  img.h  inode.h  ops.h  super.h
src/: CMakeLists.txt  bitmap.c  block.c  dir.c  disk.c  fs.c  img.c  inode.c  main.c  ops.c  run.sh  sfuse.c  super.c
uftrace.data/: info  ld-linux-x86-64.so.2.sym  libbz2.so.1.0.8.sym  libc.so.6.sym  libcapstone.so.5.sym  libdw-0.193.so.sym  libelf-0.193.so.sym  libfuse3.so.3.17.1.sym  libgcc_s.so.1.sym  liblzma.so.5.8.1.sym  libm.so.6.sym  libz.so.1.3.1.sym  libzstd.so.1.5.7.sym  sfuse.sym  task.txt
(+613 files in other folders)
